Wed Oct  3 00:01:09 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: added ability to do subdriver-specific
   initialization, and moved some shared code to agiler init function
   since krauler doesn't need it.

Mon Oct  1 07:49:31 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/snmp-ups.c:
   - Allow passing a value to an instcmd.
   - Be less verbose to the syslog when output is needed for debugging
     purposes only.

Fri Sep 28 18:37:05 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/upshandler.h,dstate.h,dstate-hal.h: The return values for
   the setvar() and instcmd() handlers are now an enum value, to add
   return values easily.

Fri Sep 28 17:18:57 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - Added entry for Liebert PowerSure Personal XT in HAL script.
 - Moved 'include/upshandler.h' to 'drivers/upshandler.h' since this is
   only used in the drivers.

Wed Sep 26 20:51:20 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Changed the 'ups.voltage.nominal' to 'output.voltage.nominal' in bcmxcp driver.

Tue Sep 25 20:51:47 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/cps-hid.c: Change 'CPS' to 'CyberPower' in some locations.
 - drivers/libshut.c,libusb.c: Fix compiler warnings.
 - drivers/usbhid-ups.c: Map ShutdownImminent back to LB.

Tue Sep 25 18:45:10 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/usbhid-ups.c: Clean up after ourselves.

Tue Sep 25 18:33:49 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/ietfmib.h: (Bernd Markgraf)
   - addition of battery temperature
   - addition of input.quality via UPS-MIB::upsInputLineBads values
     >0 showing line failures
   - correct OID to query number of input phases (now ietf reports
     3 phases on my bunch correctly)
   - corrected OID to query output current
   - corrected multiplier for output.realpower (reported in Watts, so 1)
